[gd_scene load_steps=16 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_1.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://fj33aib5y6e7" path="res://Scene/Level/XP.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://dexoawty5edc1" path="res://Art/Level/Level_1/19_1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cxpfeih5koq67" path="res://Art/Level/Level_1/48.png" id="5"]
[ext_resource type="Texture2D" uid="uid://i30tugaq07w8" path="res://Art/Level/Level_1/183.png" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(1536, 1803)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(5318, 1564)
script = null

[sub_resource type="CapsuleShape2D" id="3"]
radius = 12.0209
height = 131.522
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(204.5, 22)
script = null

[sub_resource type="CapsuleShape2D" id="5"]
radius = 13.4349
height = 131.522
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(1143, 1296.5)
script = null

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(946.5, 1296.5)
script = null

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(81, 1296.5)
script = null

[sub_resource type="RectangleShape2D" id="9"]
size = Vector2(1105.25, 1296.5)
script = null

[node name="Level_1" instance=ExtResource( "1" )]
script = ExtResource( "2" )
metadata/_edit_vertical_guides_ = [3153.0]

[node name="wall" parent="." index="0"]
collision_mask = 0

[node name="wall_left" parent="wall" index="0"]
position = Vector2(-766, -419.5)
shape = SubResource( "1" )

[node name="floor2" type="CollisionShape2D" parent="wall" index="1"]
position = Vector2(2656, 1174)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="斜坡" parent="wall" index="2" instance=ExtResource( "3" )]
position = Vector2(1178, 331)

[node name="斜坡4" parent="wall" index="3" instance=ExtResource( "3" )]
position = Vector2(1656, 337)

[node name="斜坡5" parent="wall" index="4" instance=ExtResource( "3" )]
position = Vector2(4604, 337)

[node name="斜坡2" type="StaticBody2D" parent="wall" index="5"]
position = Vector2(485, 4)
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/斜坡2" index="0"]
position = Vector2(1036, 371)
rotation = 0.785398
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall/斜坡2" index="1"]
position = Vector2(1171.75, 333)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall/斜坡2" index="2"]
position = Vector2(1307, 372)
rotation = -0.785398
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="斜坡3" type="StaticBody2D" parent="wall" index="6"]
position = Vector2(3434, 4)
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/斜坡3" index="0"]
position = Vector2(1036, 371)
rotation = 0.785398
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wall/斜坡3" index="1"]
position = Vector2(1171.75, 333)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wall/斜坡3" index="2"]
position = Vector2(1307, 372)
rotation = -0.785398
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="stop1" type="CollisionShape2D" parent="wall" index="7"]
position = Vector2(1670.5, -250.75)
shape = SubResource( "6" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="8"]
position = Vector2(2714.75, -242)
shape = SubResource( "7" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="9"]
position = Vector2(3548.5, -241)
shape = SubResource( "8" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="10"]
position = Vector2(5144.38, -172)
shape = SubResource( "9" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="11"]
position = Vector2(3028, -236)
shape = SubResource( "9" )
disabled = true
metadata/_edit_lock_ = true

[node name="End" parent="BackGround" index="0"]
metadata/_edit_lock_ = true

[node name="end2" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(718, 244)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]
position = Vector2(2014, 36)
metadata/_edit_lock_ = true

[node name="front" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(438, 338)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="floor3" type="ParallaxLayer" parent="BackGround" index="2"]
metadata/_edit_lock_ = true

[node name="floor2" type="Sprite2D" parent="BackGround/floor3" index="0"]
position = Vector2(2403, 506)
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="exit" parent="." index="10"]
position = Vector2(4202, 317)
metadata/_edit_lock_ = true
